[gd_scene load_steps=4 format=3 uid="uid://drbf4e0vmyq7s"]

[ext_resource type="Texture2D" uid="uid://d2k88hdgp43sq" path="res://asstes/shelf.png" id="1_reqgc"]
[ext_resource type="Script" uid="uid://duihpd6av6aq3" path="res://scenes/toy_shelf.gd" id="1_yti6k"]
[ext_resource type="FontFile" uid="uid://bpj3qe63c5ryv" path="res://asstes/SuperAdorable-MAvyp.ttf" id="3_ochc4"]

[node name="ToyShelf" type="Node2D"]
script = ExtResource("1_yti6k")

[node name="Shelf" type="Sprite2D" parent="."]
position = Vector2(956, 544.00006)
scale = Vector2(0.6025, 0.45333338)
texture = ExtResource("1_reqgc")

[node name="BackButton" type="Button" parent="."]
offset_left = 208.0
offset_top = 856.0
offset_right = 480.0
offset_bottom = 952.0
theme_override_fonts/font = ExtResource("3_ochc4")
theme_override_font_sizes/font_size = 36
text = "Back to the Fair"

[node name="ShelfRow1" type="HBoxContainer" parent="."]
offset_left = 1208.0
offset_top = 336.0
offset_right = 1664.0
offset_bottom = 480.0
theme_override_constants/separation = 15

[node name="ShelfRow2" type="HBoxContainer" parent="."]
offset_left = 1208.0
offset_top = 560.0
offset_right = 1664.0
offset_bottom = 704.0

[node name="ShelfRow3" type="HBoxContainer" parent="."]
offset_left = 1208.0
offset_top = 768.0
offset_right = 1664.0
offset_bottom = 912.0
